# habit_tracker

./: .coveragerc  .env.sample  .gitignore  README.md  coverage_report.txt  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habit_action_alter_habit_name.py  0003_remove_habit_name_habit_action_and_more.py
habits/tests/: test_validators.py  test_views.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
